--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,16 @@
 
     <!-- Google icons -->
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet" />
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GQ9713VGKL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+    </script>
   </head>
   <body>
     <app-root></app-root>
