--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>Espinozah</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Página web de Matías Espinoza" />
+
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <!-- Google Fonts -->
